# Edge-Cloud-Collaborative-Intelligent-Rehabilitation-System

./: .gitignore  README.md  ROADMAP.MD  pyproject.toml  requirements-vision.txt  requirements.txt
cloud/: __init__.py
cloud/app/: __init__.py  main.py  storage.py
docs/: api.md  architecture.md  demo_checklist.md  weekly_plan.md
edge/: __init__.py  run_camera_demo.py  run_controller_node.py  run_edge_demo.py  run_vision_node.py
edge/rehab_edge/: __init__.py  fusion.py  pose.py  recorder.py  rules.py  sensors.py  uploader.py
firmware/esp32_s3_sensor_bridge/: esp32_s3_sensor_bridge.ino  platformio.ini
firmware/esp32_s3_sensor_bridge/src/: esp32_s3_sensor_bridge.ino
shared/rehab_protocol/: __init__.py  models.py
tests/: test_camera_demo.py  test_controller_node.py  test_models.py  test_pose.py  test_rules.py  test_sensors.py
web/: app.js  doctor.html  patient.html  styles.css
